# terminal_recipes_rs

./: Cargo.toml
lib/cmd_sys/: Cargo.toml
lib/cmd_sys/src/: command.rs  enum_command_line.rs  lib.rs
lib/cmd_sys_macro/: Cargo.toml
lib/cmd_sys_macro/src/: enum_command_line.rs  lib.rs
lib/terminal_recipes_rs_lib/: Cargo.toml
lib/terminal_recipes_rs_lib/src/: config_options.rs  lib.rs
lib/terminal_recipes_rs_macro/: Cargo.toml
lib/terminal_recipes_rs_macro/src/: config_options.rs  lib.rs
src/: cache.rs  cfg.rs  cl.rs  cmd.rs  config.rs  initializer.rs  main.rs  recipe.rs  recipes.rs
src/commands/: config.rs  list.rs  mod.rs  rebuild_cache.rs  view.rs
