[workspace]
members = [".", "./lib/cmd_sys", "./lib/cmd_sys_macro"]
default-members = ["."]

[package]
name = "terminal_recipes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
c314-utils = "0.2.0"
cmd_sys = { path = "./lib/cmd_sys" }
glob = "0.3.1"
home = "0.5.4"
inquire = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive"] }
