[workspace]
members = [".", "./lib/cmd_sys", "./lib/cmd_sys_macro", "./lib/terminal_recipes_rs_lib", "./lib/terminal_recipes_rs_macro"]
default-members = ["."]

[package]
name = "terminal_recipes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
c314-utils = "0.2.0"
cmd_sys = { path = "./lib/cmd_sys" }
terminal_recipes_rs_lib = { path = "./lib/terminal_recipes_rs_lib" }
glob = "0.3.1"
home = "0.5.4"
inquire = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive"] }
once_cell = "1.17.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["once_cell", "json"] }
tracing-appender = "0.2.2"
convert_case = "0.6.0"
