[package]
name = "terminal_recipes_rs_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
terminal_recipes_rs_macro = { path = "../terminal_recipes_rs_macro" }
